tool_results/cppcheck_results.txt
====== cppcheck Results ======
Checking testcases/safe_programs/safe_arithmetic.c ...
Defines:
Undefines:
Includes:
Platform:native
1/13 files checked 8% done
Checking testcases/safe_programs/safe_array.c ...
Defines:
Undefines:
Includes:
Platform:native
testcases/safe_programs/safe_array.c:5:9: style: Variable 'data' can be declared as const array [constVariable]
    int data[5] = {0,1,2,3,4};
        ^
2/13 files checked 14% done
Checking testcases/safe_programs/safe_pointers.c ...
Defines:
Undefines:
Includes:
Platform:native
3/13 files checked 20% done
Checking testcases/ub_div_zero.c ...
Defines:
Undefines:
Includes:
Platform:native
testcases/ub_div_zero.c:5:14: error: Division by zero. [zerodiv]
    return a / b;
             ^
testcases/ub_div_zero.c:9:29: note: Calling function 'divide', 2nd argument '0' value is 0
    int result = divide(10, 0);
                            ^
testcases/ub_div_zero.c:5:14: note: Division by zero
    return a / b;
             ^
4/13 files checked 26% done
Checking testcases/ub_double_free.c ...
Defines:
Undefines:
Includes:
Platform:native
testcases/ub_double_free.c:15:5: error: Memory pointed to by 'p' is freed twice. [doubleFree]
    free(p);
    ^
testcases/ub_double_free.c:14:5: note: Memory pointed to by 'p' is freed twice.
    free(p);
    ^
testcases/ub_double_free.c:15:5: note: Memory pointed to by 'p' is freed twice.
    free(p);
    ^
5/13 files checked 34% done
Checking testcases/ub_invalid_shift.c ...
Defines:
Undefines:
Includes:
Platform:native
testcases/ub_invalid_shift.c:10:24: error: Shifting by a negative value is undefined behaviour [shiftNegative]
    int neg_result = x << -1;
                       ^
testcases/ub_invalid_shift.c:7:20: error: Shifting 32-bit value by 32 bits is undefined behaviour [shiftTooManyBits]
    int result = x << shift;
                   ^
testcases/ub_invalid_shift.c:6:17: note: Assignment 'shift=32', assigned value is 32
    int shift = 32;
                ^
testcases/ub_invalid_shift.c:7:20: note: Shift
    int result = x << shift;
                   ^
testcases/ub_invalid_shift.c:7:20: error: Signed integer overflow for expression 'x<<shift'. [integerOverflow]
    int result = x << shift;
                   ^
testcases/ub_invalid_shift.c:5:13: note: Assignment 'x=1', assigned value is 1
    int x = 1;
            ^
testcases/ub_invalid_shift.c:7:20: note: Integer overflow
    int result = x << shift;
                   ^
6/13 files checked 42% done
Checking testcases/ub_null_deref.c ...
Defines:
Undefines:
Includes:
Platform:native
testcases/ub_null_deref.c:6:16: warning: Either the condition 'p==NULL' is redundant or there is possible null pointer dereference: p. [nullPointerRedundantCheck]
    int val = *p;
               ^
testcases/ub_null_deref.c:7:11: note: Assuming that condition 'p==NULL' is not redundant
    if (p == NULL) {
          ^
testcases/ub_null_deref.c:6:16: note: Null pointer dereference
    int val = *p;
               ^
testcases/ub_null_deref.c:5:19: style: Parameter 'p' can be declared as pointer to const [constParameterPointer]
void process(int *p) {
                  ^
7/13 files checked 51% done
Checking testcases/ub_oob_access.c ...
Defines:
Undefines:
Includes:
Platform:native
testcases/ub_oob_access.c:4:21: style: Parameter 'arr' can be declared as const array [constParameter]
int get_element(int arr[], int index) {
                    ^
8/13 files checked 58% done
Checking testcases/ub_signed_overflow.c ...
Defines:
Undefines:
Includes:
Platform:native
testcases/ub_signed_overflow.c:6:15: warning: Invalid test for overflow 'x+1>x'; signed integer overflow is undefined behavior. Some mainstream compilers remove such overflow tests when optimising the code and assume it's always true. [invalidTestForOverflow]
    if (x + 1 > x) {
              ^
9/13 files checked 66% done
Checking testcases/ub_string_literal.c ...
Defines:
Undefines:
Includes:
Platform:native
testcases/ub_string_literal.c:5:17: error: Modifying string literal "hello" directly or indirectly is undefined behaviour. [stringLiteralWrite]
    char *str = "hello";
                ^
testcases/ub_string_literal.c:6:5: note: Modifying string literal "hello" directly or indirectly is undefined behaviour.
    str[0] = 'H';
    ^
testcases/ub_string_literal.c:5:17: note: Modifying string literal "hello" directly or indirectly is undefined behaviour.
    char *str = "hello";
                ^
10/13 files checked 71% done
Checking testcases/ub_type_punning.c ...
Defines:
Undefines:
Includes:
Platform:native
testcases/ub_type_punning.c:6:17: portability: Casting between signed int * and float * which have an incompatible binary data representation. [invalidPointerCast]
    float *fp = (float *)&x;
                ^
testcases/ub_type_punning.c:6:12: style: Variable 'fp' can be declared as pointer to const [constVariablePointer]
    float *fp = (float *)&x;
           ^
11/13 files checked 84% done
Checking testcases/ub_uninitialized.c ...
Defines:
Undefines:
Includes:
Platform:native
testcases/ub_uninitialized.c:6:13: error: Uninitialized variable: x [uninitvar]
    int y = x + 1;
            ^
testcases/ub_uninitialized.c:10:9: error: Uninitialized variable: flag [uninitvar]
    if (flag) {
        ^
12/13 files checked 91% done
Checking testcases/ub_use_after_free.c ...
Defines:
Undefines:
Includes:
Platform:native
testcases/ub_use_after_free.c:15:6: error: Dereferencing 'p' after it is deallocated / released [deallocuse]
    *p = 100;
     ^
testcases/ub_use_after_free.c:16:5: error: Memory pointed to by 'p' is freed twice. [doubleFree]
    free(p);
    ^
testcases/ub_use_after_free.c:12:5: note: Memory pointed to by 'p' is freed twice.
    free(p);
    ^
testcases/ub_use_after_free.c:16:5: note: Memory pointed to by 'p' is freed twice.
    free(p);
    ^
13/13 files checked 100% done
testcases/ub_null_deref.c:6:16: error: Null pointer dereference: p [ctunullpointer]
    int val = *p;
               ^
testcases/ub_null_deref.c:15:12: note: Calling function process, 1st argument is null
    process(NULL);
           ^
testcases/ub_null_deref.c:6:16: note: Dereferencing argument p that is null
    int val = *p;
               ^
nofile:0:0: information: Active checkers: 106/592 (use --checkers-report=<filename> to see details) [checkersReport]

